force-app/main/default/objects/cdcpc__Global_Site_Part_Parameter_ISPM__c/cdcpc__Global_Site_Part_Parameter_ISPM__c.object-meta.xml
<CustomObject>
    <label>Global Site Part Parameters (ISPM)</label>
    <nameField>
        <label>Global Site Part Parameters (ISPM)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Site Part Parameters (ISPM)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>