force-app/main/default/objects/cdcpc__Global_Site_Part_Parameter_ISPM__c/fields/cdcpc__InventoryPartType__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__InventoryPartType__c</fullName>
    <label>InventoryPartType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>