force-app/main/default/objects/cdcpc__Global_Site_Part_Parameter_ISPM__c/fields/cdcpc__LeadTimeUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__LeadTimeUL__c</fullName>
    <label>LeadTimeUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>