force-app/main/default/objects/cdcpc__Global_Site_Part_Parameter_ISPM__c/fields/cdcpc__SERIALTRACKCODE__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SERIALTRACKCODE__c</fullName>
    <label>SERIALTRACKCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>